# napari-swc-viewer

./: .gitignore  CLAUDE.md  README.md  pixi.toml  pyproject.toml
.github/workflows/: test.yml
example_scripts/: align_hemispheres.py  convert_to_parquet.py  download_examples.py
scripts/: benchmark_slice_projection.py  download_test_data.py  flip_swc.py  swc_to_parquet.py
src/napari_swc_viewer/: __init__.py  _reader.py  db.py  hemisphere.py  napari.yaml  parquet.py  region.py  swc.py  workers.py
src/napari_swc_viewer/analysis/: __init__.py  clustering.py  correlation.py  heatmap.py  mask.py
src/napari_swc_viewer/widgets/: __init__.py  analysis_tab.py  neuron_table.py  neuron_viewer.py  reference_layers.py  region_selector.py  slice_projection.py
tests/: test_color_by_cluster.py  test_db.py  test_hemisphere.py  test_hemisphere_integration.py  test_import.py  test_swc.py
