[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "napari-swc-viewer"
dynamic = ["version"]
description = "A napari plugin for viewing SWC files"
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: napari",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "napari>=0.5.0",
    "numpy>=1.24",
    "brainglobe-atlasapi>=2.0",
]

[project.optional-dependencies]
testing = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.entry-points."napari.manifest"]
napari-swc-viewer = "napari_swc_viewer:napari.yaml"

[tool.setuptools_scm]
write_to = "src/napari_swc_viewer/_version.py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]
